styles/grid-container.css
.grid {
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-auto-rows: 240px;
    margin: 100px;
}



.grid-child {
    
    background-color: rgb(78, 90, 71);
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 100%;
    width: 100%;
    font-size: 20px;
    border-radius: 10px;
    border-color: black;
    transition: border-color 0.4s ;
    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     
}

.hover-animation:hover{
    
   
    z-index: 3;
    border-style: solid;
    border-color: aliceblue;
}

.grid-child p {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 8%;
   
}

.grid-child img {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10%;
    border-radius: 200px;
}


.light-green {
    background-color: rgb(52, 55, 52);
    color: white;
}


@media screen and (min-width: 600px){
    .grid-wide-2 {
        grid-column: span 2 / auto; 
    }

    .grid-wide-3 {
        grid-column: span 3 / auto;
    }

    .grid-tall-2 {
        grid-row: span 2 / auto;
    }
    
}

.dark-green-background {
    background-color:rgb(78, 90, 71);
}

.brown1-background {
    background-color:rgb(68, 59, 44); 
    
}

.grey-background {
    background-color: rgb(68, 68, 68);
}

.green1-background {
    background-color: rgb(112, 125, 112);
}

.cream-background p {
    
    color:rgb(9, 10, 9);
    font-size: 19px;
}

.cream-background {
    background-color: rgb(230, 234, 225);
    
}

